sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:5: error: not found: value j
      {j =i-1
       ^AlgInsertionSort:7: error: not found: value j
       while (!plusPetitQue(j,v))&&(j>0)
                            ^AlgInsertionSort:7: error: not found: value &&
       while (!plusPetitQue(j,v))&&(j>0)
                                 ^AlgInsertionSort:7: error: not found: value j
       while (!plusPetitQue(j,v))&&(j>0)
                                    ^AlgInsertionSort:8: error: not found: value j
          {copie(j,j+1)}
                 ^AlgInsertionSort:8: error: not found: value j
          {copie(j,j+1)}
                   ^AlgInsertionSort:9: error: not found: value j
       setValeur(j, v) 
                 ^