sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var v = 0
  for (i<- 1 to getNombreValeurs()-1)
      {j =i-1
       v = getValeur(i)
       while (!plusPetitQue(j,v))&&(j>0)
          {copie(j,j+1)}
       setValeur(j, v) 
        
        
        
      }
  
  
  
  

}